src/index.css
:root {
  --active-color: #ffc000;
  --active-color-lighter: #ffdf81;
  --complete-color: #2ea3ed;
  --complete-color-lighter: #82c4ee;
  --disabled-color: #a6a6a6;
  --disabled-color-lighter: #dddddd;
  --bg-accent-color1: #d99b3e;
  --bg-accent-color2: #345071;
}

html {
  scroll-behavior: smooth;
}

body {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 100%;
  overflow-x: hidden;
}

body.modal-open {
  /* overflow-y: hidden; */
}

/* Remove Button CSS */

button {
  margin: 0;
  padding: 0;
  background-color: transparent;
  border: 0;
  box-sizing: content-box;
  font-family: inherit;
  cursor: pointer;
}

svg {
  overflow: visible;
}

/* Class CSS */

.App {
  margin: 1.5rem;
}

.diagram-label-wrapper {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100%;
  width: 100%;
}

.diagram-label-group {
  fill: var(--bg-accent-color2);
  stroke: none;
  color: white;
  font-size: 1rem;
  text-align: center;
}

.shape a {
  fill: inherit;
  outline: none;
}

.shape.not-started.disabled .shape-indicator,
.shape.not-started.active .shape-indicator {
  visibility: hidden;
}

.shape.not-started.disabled {
  fill: var(--disabled-color);
  transition: fill 300ms ease-in-out;
  cursor: not-allowed;
}

.shape.not-started.active {
  fill: var(--active-color);
  transition: fill 300ms ease-in-out;
  cursor: pointer;
}

.shape.complete {
  fill: var(--complete-color);
  transition: fill 300ms ease-in-out;
  cursor: default;
}

.shape.not-started.disabled:hover {
  fill: var(--disabled-color-lighter);
  transition: fill 300ms ease-in-out;
}

.shape.not-started.active:hover {
  fill: var(--active-color-lighter);
  transition: fill 300ms ease-in-out;
}

.shape.complete:hover {
  fill: var(--complete-color-lighter);
  transition: fill 300ms ease-in-out;
}

.shape.not-started.disabled a:focus .atomic-shape,
.shape.not-started.disabled a:focus .shape-icon circle,
.shape.complete a:focus .atomic-shape,
.shape.complete a:focus .shape-icon circle {
  filter: url(#soft-glow-blue);
}

.shape.not-started.active a:focus .atomic-shape,
.shape.not-started.active a:focus .shape-icon circle {
  filter: url(#soft-glow-yellow);
}

.shape-label-wrapper {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100%;
  width: 100%;
}

.shape-label {
  color: white;
  font-size: 1.5rem;
  text-align: center;
}

/* Diagram Specific CSS */

/* Arc Diagram */

.background-assets .arc {
  stroke: var(--bg-accent-color2);
  stroke-width: 4;
  stroke-linecap: round;
}

.smart-diagram.arc .diagram-label {
  font-size: 1.75rem;
}

.shape.arc .shape-label {
  font-size: 2rem;
}

.shape.arc.not-started.disabled .shape-icon circle {
  fill: var(--disabled-color-lighter);
  stroke: var(--disabled-color);
}

.shape.arc.not-started.active .shape-icon circle {
  fill: var(--active-color-lighter);
  stroke: var(--active-color);
}

.shape.arc.complete .shape-icon circle {
  fill: var(--complete-color-lighter);
  stroke: var(--complete-color);
}

/* Cycle Diagram */

.smart-diagram.cycle .diagram-label {
  font-size: 1.5rem;
}

.background-assets .cycle-arrow-group {
  fill: var(--bg-accent-color2);
  stroke: var(--bg-accent-color2);
}

.background-assets .cycle-arrow {
  fill: none;
}

/* Pyramid Diagram */

.background-assets .triangle {
  fill: var(--bg-accent-color1);
  stroke: none;
}

/* Pie Chart Diagram */

.shape.pie.not-started.disabled a:focus .shape-icon circle,
.shape.pie.complete a:focus .shape-icon circle {
  filter: url(#soft-glow-blue);
}

.shape.pie.not-started.active a:focus .shape-icon circle {
  filter: url(#soft-glow-yellow);
}

.shape.pie.not-started.disabled a:focus .atomic-shape,
.shape.pie.not-started.active a:focus .atomic-shape,
.shape.pie.complete a:focus .atomic-shape {
  filter: none;
}

.wedge {
  stroke: white;
}

/* Flyout Content CSS */

.flyout-content-background {
  visibility: hidden;
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  transition: visibility 0ms ease-in-out 300ms;
  overflow-x: hidden;
  overflow-y: auto;
  z-index: 1;
}

.flyout-content-background.active {
  visibility: visible;
  transition: visibility 0ms ease-in-out;
}

.flyout-content {
  position: absolute;
  right: -400px;
  width: 400px;
  height: 100vh;
  background-color: white;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  transition: right 300ms ease-in-out;
  z-index: inherit;
}

.flyout-content-background.active .flyout-content {
  right: 0;
  transition: right 300ms ease-in-out;
}

.flyout-content h2,
.flyout-content p {
  margin: 0;
  padding: 24px;
}

.flyout-content h2 {
  color: white;
  background-color: #2ea3ed;
}

.btn-continue {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 8rem;
  height: 2.5rem;
  margin: 0 auto;
  color: white;
  background-color: #bd3185;
  border-radius: 6px;
  font-size: 1.25rem;
}

.btn-action:hover {
  filter: brightness(110%);
}

/* Controls CSS */

.controls {
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 12px 0 24px 0;
}

.controls select {
  width: 10rem;
  height: 2.5rem;
  margin-right: 12px;
  border-radius: 6px;
  font-size: 1.25rem;
}

.btn-refresh {
  width: 10rem;
  height: 2.5rem;
  margin-left: 12px;
  color: white;
  background-color: #bd3185;
  border-radius: 6px;
  font-size: 1.25rem;
}

/* Smart Diagram Max Widths */

.smart-diagram-wrapper {
  margin: 0 auto;
}

.smart-diagram-wrapper.arc {
  max-width: 2000px;
}

.smart-diagram-wrapper.arrows {
  max-width: 2000px;
}

.smart-diagram-wrapper.cycle {
  max-width: 750px;
}

.smart-diagram-wrapper.honeycomb {
  max-width: 800px;
}

.smart-diagram-wrapper.matrix {
  max-width: 700px;
}

.smart-diagram-wrapper.pie {
  max-width: 750px;
}

.smart-diagram-wrapper.pyramid {
  max-width: 800px;
}

